2019-03-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix show ending zeroes for rational numbers
	* Avoid multiplication of very long polynomials (fixed)

2019-03-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ignore locale option (CLI)
	* Handle empty set option value (in most cases by assuming "on") (CLI)

2019-03-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for equations with uncertainty propagation
	* Fix cubic equation in exact mode in some cases
	* Fix a^x=b if it is now known if a and b is zero
	* Layout fixes when formatting "= approx. 'a'"

2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Two's complement for hexadecimal

2019-02-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use old SI definitions until 2019-05-20
	* Update translations
	* Hide unit and constant suffixes in result

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix exact decimals mode
	* Fixes for conversion to base units with nonlinear unit relations
	* Do not show nonlinear unit conversion warning unnecessarily
	* Fix compilation on 64-bit Windows
	* Uncertainty propagation improvements
	* Fixes for conversion to base units or optimal units involving approximate relations in exact mode
	* Improved simplification with nounit() factors
	* Fix variable reparsing when variable units are (de)activated

2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace decimal with exact decimal rational numbers when exact mode is toggled on (CLI)

2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Separate interval calculation / uncertainty propagation method choice (from interval arithmetic for approximate functions and irrational numbers)
	* Enable interval arithmetic by default (CLI)
	* Relative uncertainty property for variables, units and data objects
	* Fixes for complex uncertainty propagation